<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:text="@string/add_inventory_title"
        android:textSize="20sp" />

    <RelativeLayout
        android:id="@+id/itemNameInputSection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5sp">

        <TextView
            android:id="@+id/addItemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/itemNameInput"
            android:layout_centerVertical="true"
            android:text="@string/inventory_add_item_name"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/itemNameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_toEndOf="@id/addItemName"
            android:inputType="text" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/itemValueSection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:layout_marginTop="10sp">

        <TextView
            android:id="@+id/itemValueText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_value_text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/productValueButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20sp"
            android:layout_toEndOf="@+id/itemValueText">

            <RadioButton
                android:id="@+id/valueHighButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_value_high"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/valueMediumButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_value_medium"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/valueLowButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_value_low"
                android:textSize="20sp" />
        </RadioGroup>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/itemTypeSection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:layout_marginTop="10sp">

        <TextView
            android:id="@+id/itemTypeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/spinner"
            android:layout_centerVertical="true"
            android:text="@string/item_category_type"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="20sp"
            android:layout_toEndOf="@id/itemTypeText"
            android:textAlignment="center" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/itemConditionSection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:layout_marginTop="10sp">

        <TextView
            android:id="@+id/itemConditionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_condition_text"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/productConditionButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40sp"
            android:layout_toEndOf="@id/itemConditionText">

            <RadioButton
                android:id="@+id/conditionNewButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_button_condition_new"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/conditionUsedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radio_button_condition_used"
                android:textSize="20sp" />
        </RadioGroup>
    </RelativeLayout>

    <Button
        android:id="@+id/submitNewItemButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add_new_item_button_text"
        android:layout_marginTop="20sp"/>


</LinearLayout>
