<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="#FFFFFF">

    <TextView
        android:id="@+id/loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:text="@string/login_title"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="#336666"/>

    <ImageView
        android:id="@+id/loginImage"
        android:layout_width="match_parent"
        android:layout_height="220sp"
        android:layout_below="@id/loginTitle"
        android:src="@drawable/login_image"
        android:scaleType="centerCrop"
        />

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginImage"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:hint="@string/email"
        android:textSize="20sp"
        android:layout_marginTop="10sp"
        />

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailInput"
        android:layout_marginLeft="20sp"
        android:layout_marginRight="20sp"
        android:hint="@string/password"
        android:textSize="20sp" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:layout_below="@id/passwordInput"
        android:layout_centerInParent="true"
        android:layout_marginTop="20sp"
        android:text="@string/login_button"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/registerLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/loginButton"
        android:layout_marginTop="25sp"
        android:text="@string/new_user"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="#FF0000"
        />

</RelativeLayout>